# python-template

./: .gitignore  Makefile  README.md  justfile  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: lint.yaml  test.yaml
src/config/: main.py
src/python_template/: main.py
test/: test_exampe.py
